--- a/hello-city/templates/pages/home.html.twig
+++ b/hello-city/templates/pages/home.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Hello City!{% endblock %}
+
 {% block body %}
+    <img src="{{ asset('img/icon.jpg') }}" alt="Quebec Flag">
     <h1>Hello from Quebec!</h1>
         <p>It's currently {{ 'now'| date('H:i A') }}.</p>
-    <footer>
-        <p>&copy; Copyright {{ 'now'| date('Y') }} &middot;
-            <a href="#" >About Us</a>
-        </p>
-    </footer>
+
 {% endblock %}
